<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/img_nav_home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/img_nav_notification"
            android:title="@string/menu_notifications"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/img_nav_favorite"
            android:title="@string/menu_favorite"/>

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/img_nav_feed"
            android:title="@string/menu_feed"/>
    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings"/>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/img_nav_about"
                android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
